#7524 - fix on hover slider wrap

--- a/sites/all/themes/slac/sass/blocks.scss
+++ b/sites/all/themes/slac/sass/blocks.scss
@@ -568,7 +568,10 @@ a.submit-feedback {
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: hidden;  
+  &:hover .views_slideshow_slide .views-field-nothing{
+    background: rgb(38,130,202);
+  }
   div{
     width: 100%;
     height: 100%;
@@ -587,9 +590,6 @@ a.submit-feedback {
       width: 100%;
       height: auto;
       border: none;
-    }
-    &:hover .views-field-nothing{
-      background: rgb(38,130,202);
     }
     .views-field-nothing{
       position: absolute;
